<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>talosbot_navigation</name>
  <version>1.0.0</version>
  <description>Talosbot Navigation Package</description>
  <maintainer email="michaeljonathan664@gmail.com">Michael Jonathan</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/mich1342</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <exec_depend>nav2_bringup</exec_depend>
    <exec_depend>slam_toolbox</exec_depend>
  </export>
</package>
